clean up. fix menu button being squished in phone portait mode by  adding flex-shrink:0

--- a/master/styles/components/nav-toggle.less
+++ b/master/styles/components/nav-toggle.less
@@ -2,6 +2,7 @@
   width: @header-phone-height;
   height: @header-phone-height;
   position:relative;
+  flex-shrink: 0;
 }
 
 .pkp_site_nav_toggle > span {
